src/deploy/kubernetes/infra/dashboard/welcome/application/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-welcome-application
spec:
  selector:
    matchLabels:
      app: nginx-welcome-application
  replicas: 1
  strategy:
    type: Recreate #RollingUpdate
  template:
    metadata:
      labels:
        app: nginx-welcome-application
    spec:
      # initcontainers justs accepts a docker image, and uses postgres client to check readyness
      containers:
        - name: nginx-welcome-application
          image: nginx:1.17.10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          volumeMounts:
            - mountPath: /var/log/nginx/logs/
              name: nginx-welcome-application-applogs
            - mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              name: nginx-welcome-application-config-files-volume
            - mountPath: /www/data
              name: nginx-welcome-application-data-files-volume

      volumes:
        - name: nginx-welcome-application-applogs
          emptyDir: {}
        - name: nginx-welcome-application-config-files-volume
          configMap:
            name: nginx-welcome-application-config-files
        - name: nginx-welcome-application-data-files-volume
          configMap:
            name: nginx-welcome-application-data-files
