src/deploy/kubernetes/infra/dashboard/welcome/application/templates/service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-welcome-application
spec:
  selector:
    app: nginx-welcome-application
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
