src/deploy/kubernetes/infra/dashboard/welcome/application/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-welcome-application-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # basic auth
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: authentication-secret

spec:
  tls:
    - hosts:
        - goafabric.org
      secretName: server-certificate-secret
  rules:
    - host: goafabric.org
      http:
        paths:
          - path: /welcome(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-welcome-application
                port:
                  number: 8080
